Fixed header scrolling and overlay z-index to 3

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -1,4 +1,5 @@
 .header {
+  z-index: var(--z-index-3);
   padding: 26px 0 22px;
   transition:
     opacity var(--transition),
@@ -97,6 +98,7 @@
     background-color: var(--neutral-color-130);
     transform: translateY(8px);
     transition: background-color var(--transition);
+    cursor: pointer;
 
     &::before {
       content: '';
@@ -192,7 +194,7 @@
   @include small-tablet {
     position: fixed;
     inset: 0;
-    z-index: 0;
+    z-index: var(--z-index-3);
     background-color: #00000054;
     opacity: 0;
     visibility: hidden;
